# fake-faces

./: .gitignore  .gitmodules  Dockerfile  LICENSE  Makefile  README.md  combine_datasets.sh  environment.yaml  mid-project-update.txt  pyproject.toml  report.bib  report.tex  setup.py
app/: .funcignore  README.md  requirements.txt
app/classify/: __init__.py  align_all_parallel.py  predict.py  scraper.py
app/fakefaceapp/: .gitignore  README.md  package-lock.json  package.json
app/fakefaceapp/public/: index.html
app/fakefaceapp/src/: App.vue
app/fakefaceapp/src/components/: InterFace-API.vue  InterFace-Upl.vue
fake_faces/: __init__.py  cli.py  explaining.py  flycheck_training.py  labeling.py  plotting.py  predicting.py  processing.py  testing.py  training.py
fake_faces/experiments/: __init__.py  baseline.py  densenet.py  experiment.py  resnet.py  vgg10.py  vgg16.py
fake_faces/models/: ResNet.py  __init__.py  baseline.py  baseline_batchnorm.py  densenet121.py  model.py  resnet.py  vgg10.py  vgg16.py
notebooks/: inference.ipynb
notebooks/images/fake/: stats.txt
tables/: baseline-metrics.tex  fairness-metrics.tex  vgg10-combined-fakefaces-metrics.tex  vgg10-combined-metrics.tex  vgg10-fairface-metrics.tex  vgg10-fakeface-metrics.tex  vgg10-transfer-fail.tex
tests/: test_fake_faces.py
