[tool.poetry]
name = "fake-faces"
version = "0.1.0"
description = ""
authors = ["Alex Kyllo <alex.kyllo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
tensorflow = "^2.3.1"
mtcnn = "^0.1.0"
matplotlib = "^3.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
pylint = "^2.6.0"

[tool.poetry.scripts]
fake-faces = 'fake_faces.cli:cli'

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
